--- a/models_in_progress/PEPRMT-Tidal/JAGS_PEPRMT.Rmd
+++ b/models_in_progress/PEPRMT-Tidal/JAGS_PEPRMT.Rmd
@@ -73,14 +73,9 @@ Temp + autoregressive term
 comb <- comb %>%
   arrange(site, DOY)
 y <- comb$CH4_slope_umol_per_day
-TA_C <- comb$TA_C
-WTD_cm <- comb$WTD_cm
-EVI <- comb$EVI
-Salinity_daily_ave_ppt <- comb$Salinity_daily_ave_ppt
-NO3_mgL <- comb$NO3_mg_L
-SOM_MEM_gC_m3 <- comb$SOM_MEM_gC_m3
 SOM_labile <- comb$SOM_labile
 SOM_total <- comb$SOM_total
+
 ind <- comb %>%
   mutate(ind = row_number()) %>%
   filter(!site==lag(site)) %>%
@@ -97,13 +92,15 @@ chains <- 3
 
 model.fit <- jags.model(file="jags_model.txt",
                         data=list(y = y, 
-                                  n_sites = length(unique(site_i)),
+                                  n_sites = length(unique(comb$site)),
                                   ind = ind,
-                                  TA_C = TA_C,
-                                  WTD_cm = WTD_cm,
-                                  EVI = EVI,
-                                  Salinity_daily_ave_ppt = Salinity_daily_ave_ppt,
-                                  NO3_mg_L = NO3_mgL,
+                                  TA_C = comb$TA_C,
+                                  WTD_cm = comb$WTD_cm,
+                                  EVI = comb$EVI,
+                                  LUE = comb$LUE,
+                                  Salinity_daily_ave_ppt = comb$Salinity_daily_ave_ppt,
+                                  NO3_mg_L = comb$NO3_mg_L,
+                                  PAR_umol_m2_day = comb$PAR_umol_m2_day,
                                   SOM_labile = SOM_labile,
                                   SOM_total = SOM_total),
                         inits=model.inits, 
